--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "requests",
     "sqlite-utils",
     "supabase>=2.0.0",
+    "atlas",
 ]
 
 # Note: Uses Claude Code CLI (subprocess) by default - no anthropic SDK needed.
@@ -65,6 +66,9 @@ sources = ["src"]
 asyncio_mode = "auto"
 testpaths = ["tests"]
 pythonpath = ["src"]
+
+[tool.uv.sources]
+atlas = { path = "../atlas", editable = true }
 
 [tool.ruff]
 line-length = 88
